--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,14 +11,16 @@ services:
 #        - https_proxy=http://127.0.0.1:1087
 #        - HTTP_PROXY=http://127.0.0.1:1087
 #        - HTTPS_PROXY=http://127.0.0.1:1087
-    restart: always
     ports:
       - "9501:9501"
     volumes:
       - ./hyperf/:/opt/www/
     privileged: true
     working_dir: /opt/www/
+    restart: always
     container_name: hyperf
+    depends_on:
+      - "mysql"
     command:
       - /bin/sh
       - -c
@@ -29,17 +31,32 @@ services:
 
   admin:
     image: node:12.18
-    restart: always
     ports:
       - "9502:9528"
     volumes:
       - ./admin/:/opt/www/
     privileged: true
     working_dir: /opt/www/
+    restart: always
     container_name: admin
+    depends_on:
+      - "hyperf"
     command:
       - /bin/sh
       - -c
       - |
         yarn
         yarn run dev
+  mysql:
+    image: mysql:8.0
+    ports:
+      - "3306:3306"
+    volumes:
+      - ./mysql/mysql.cnf:/etc/mysql/conf.d/mysql.cnf:ro
+      - ./mysql/data:/var/lib/mysql/:rw
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: "123456"
+    container_name: mysql
+
+
