--- a/hyperf/composer.json
+++ b/hyperf/composer.json
@@ -15,7 +15,7 @@
         "php": ">=7.2",
         "ext-swoole": ">=4.5",
         "hyperf/cache": "~2.0.0",
-        "hyperf/command": "~2.0.0",
+        "hyperf/command": "^2.0",
         "hyperf/config": "~2.0.0",
         "hyperf/db-connection": "~2.0.0",
         "hyperf/framework": "~2.0.0",
@@ -25,7 +25,8 @@
         "hyperf/memory": "~2.0.0",
         "hyperf/process": "~2.0.0",
         "hyperf/redis": "~2.0.0",
-        "hyperf/translation": "^2.0"
+        "hyperf/translation": "^2.0",
+        "hyperf/devtool": "^2.0"
     },
     "require-dev": {
         "swoole/ide-helper": "^4.5",
@@ -33,7 +34,6 @@
         "mockery/mockery": "^1.0",
         "doctrine/common": "^2.9",
         "phpstan/phpstan": "^0.12",
-        "hyperf/devtool": "~2.0.0",
         "hyperf/testing": "~2.0.0"
     },
     "suggest": {
