【docker】启动hyperf命令行流程加入 尝试创建数据库

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       - |
           composer install
           #php bin/hyperf.php start
+          php bin/hyperf.php TryCreateDatabase:true
           php watch -c             # 热更新
 
   admin:
