【hyperf】添加文件上传接口

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,19 @@
 .idea
-/hyperf/.buildpath
-/hyperf/.settings/
-/hyperf/.project
-/hyperf/*.patch
-/hyperf/.idea/
-/hyperf/.git/
-/hyperf/runtime/
-/hyperf/vendor/
-/hyperf/.phpintel/
-/hyperf/.env
-/hyperf/.DS_Store
-/hyperf/*.lock
-/hyperf/.phpunit*
+hyperf/.buildpath
+hyperf/.settings/
+hyperf/.project
+hyperf/*.patch
+hyperf/.idea/
+hyperf/.git/
+hyperf/runtime/
+hyperf/vendor/
+hyperf/.phpintel/
+hyperf/.env
+hyperf/.DS_Store
+hyperf/*.lock
+hyperf/.phpunit*
+!hyperf/public/uploads/2020-07-12/5f0ae653f1083.png
+hyperf/public/uploads
 
 admin/.DS_Store
 admin/node_modules/
