--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,9 +33,12 @@ services:
           php watch -c             # 热更新
 
   admin:
-    image: node:12.18
+    image: admin:latest
+    build:
+      context: .
+      dockerfile: ./admin/Dockerfile
     ports:
-      - "9502:9528"
+      - "9502:4200"
     volumes:
       - ./admin/:/opt/www/
     privileged: true
@@ -49,7 +52,7 @@ services:
       - -c
       - |
         yarn
-        yarn run dev
+        ng serve --port 4200
   mysql:
     image: mysql:8.0
     ports:
