--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
       - -c
       - |
         yarn
-        ng serve --port 4200
+        ng serve --port 4200 --host 0.0.0.0
   mysql:
     image: mysql:8.0
     ports:
