【docker-admin】启动判断是否有安装依赖，没有则进行安装

--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -4,7 +4,7 @@ RUN yarn global add @angular/cli@9.1.7;
 
 # cache some packages
 COPY . /opt/www
-RUN yarn && rm -rf /opt/www;
+RUN yarn && rm -rf /opt/www
 
 WORKDIR /opt/www
 
