--- a/admin/package.json
+++ b/admin/package.json
@@ -29,6 +29,7 @@
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
     "@ng-select/ng-select": "3.7.3",
     "@ngrx/store": "9.0.0",
+    "@ngrx/store-devtools": "^9.2.0",
     "@ngx-translate/core": "12.1.2",
     "@ngx-translate/http-loader": "4.0.0",
     "@swimlane/ngx-charts": "14.0.0",
@@ -64,6 +65,7 @@
     "ng2-file-upload": "1.4.0",
     "ng2-nouislider": "1.8.2",
     "ngx-chips": "2.1.0",
+    "ngx-cookie-service": "^3.0.4",
     "ngx-custom-validators": "9.1.0",
     "ngx-device-detector": "1.4.0",
     "ngx-image-cropper": "3.0.3",
