--- a/admin/package.json
+++ b/admin/package.json
@@ -21,6 +21,7 @@
     "@ant-design/pro-layout": "^6.4.15",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.2.19",
+    "bizcharts": "^4.0.14",
     "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
