--- a/admin/package.json
+++ b/admin/package.json
@@ -26,6 +26,7 @@
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-sortablejs": "^2.0.11",
     "umi": "^3.2.19",
     "yorkie": "^2.0.0"
   }
