--- a/admin/package.json
+++ b/admin/package.json
@@ -22,6 +22,7 @@
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.2.19",
     "bizcharts": "^4.0.14",
+    "js-cookie": "^2.2.1",
     "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
