--- a/hyperf/.env
+++ b/hyperf/.env
@@ -2,11 +2,11 @@ APP_NAME=skeleton
 APP_ENV=dev
 
 DB_DRIVER=mysql
-DB_HOST=mysql
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=hyperf
+DB_DATABASE=qianli
 DB_USERNAME=root
-DB_PASSWORD=123456
+DB_PASSWORD=12345678
 DB_CHARSET=utf8mb4
 DB_COLLATION=utf8mb4_unicode_ci
 DB_PREFIX=
