--- a/admin/package.json
+++ b/admin/package.json
@@ -24,6 +24,7 @@
     "bizcharts": "^4.0.14",
     "js-cookie": "^2.2.1",
     "lint-staged": "^10.0.7",
+    "path-to-regexp": "^6.1.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
