--- a/admin/package.json
+++ b/admin/package.json
@@ -27,6 +27,7 @@
     "path-to-regexp": "^6.1.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
+    "react-color": "^2.18.1",
     "react-dom": "^16.12.0",
     "react-sortablejs": "^2.0.11",
     "umi": "^3.2.19",
