--- a/admin/package.json
+++ b/admin/package.json
@@ -32,5 +32,8 @@
     "react-sortablejs": "^2.0.11",
     "umi": "^3.2.19",
     "yorkie": "^2.0.0"
+  },
+  "devDependencies": {
+    "react-json-view": "^1.19.1"
   }
 }
