【admin】初始化自定义富文本编辑器

--- a/admin/package.json
+++ b/admin/package.json
@@ -22,6 +22,7 @@
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.2.19",
     "bizcharts": "^4.0.14",
+    "draft-js": "^0.11.7",
     "js-cookie": "^2.2.1",
     "lint-staged": "^10.0.7",
     "path-to-regexp": "^6.1.0",
