【admin-fix】解决自定义富文本编辑器的光标不保持在输入框的问题

--- a/admin/package.json
+++ b/admin/package.json
@@ -23,7 +23,9 @@
     "@umijs/test": "^3.2.19",
     "bizcharts": "^4.0.14",
     "braft-editor": "^2.3.9",
+    "braft-utils": "^3.0.12",
     "draft-js": "^0.11.7",
+    "draftjs-utils": "^0.10.2",
     "js-cookie": "^2.2.1",
     "lint-staged": "^10.0.7",
     "path-to-regexp": "^6.1.0",
